feat: undo/redo support!
Major internal changes, ported from 1.21.1